<resources>
    <string name="app_name">Weather Forecast</string>

    <string name="get_weather">get weather forecast</string>
    <string name="wallpaper_for_the_app">Wallpaper for the app</string>
    <string name="weather_icon">weather icon</string>
    <string name="choose_location">choose location</string>
    <string name="refresh_the_page">refresh the page</string>
    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="drop_icon">drop icon</string>
    <string name="list_is_empty">This list is empty</string>

    <string name="allow_the_app_to_use_geolocation">Please, allow the app access to the geolocation</string>
    <string name="permission_is_granted">Permission is granted</string>
    <string name="permission_denied">Permission denied</string>
    <string name="slash">/</string>
    <string name="feels_like">feels like </string>
    <string name="percents">%</string>
    <string name="something_went_wrong">Something went wrong..</string>
    <string name="something_wrong_with_server">Something wrong with server..</string>
    <string name="enable_location">Enable location?</string>
    <string name="enable_location_description">The location service is disabled on your phone. \nDo you want to turn it on?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

</resources>
