<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/wallpaper"
        android:src="@drawable/sky"
        android:scaleType="centerCrop"
        android:alpha="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:contentDescription="@string/wallpaper_for_the_app"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:cardCornerRadius="5dp"
        android:elevation="0dp"
        android:backgroundTint="@color/background_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/container_in_main_card"
            >

            <TextView
                android:id="@+id/card_main_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="16dp"
                android:fontFamily="casual"
                android:paddingTop="5dp"
                android:text="Wednesday, june 13, 9:00"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@id/container_in_main_card"
                app:layout_constraintTop_toTopOf="@id/container_in_main_card" />

            <ImageView
                android:id="@+id/card_main_weather_icon"
                android:layout_width="159dp"
                android:layout_height="173dp"
                android:layout_margin="16dp"
                android:contentDescription="@string/weather_icon"
                android:scaleType="fitCenter"
                android:src="@drawable/weather_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.9"
                app:layout_constraintStart_toEndOf="@id/barrier"
                app:layout_constraintTop_toBottomOf="@+id/card_main_date"
                app:layout_constraintVertical_bias="0.2" />

            <TextView
                android:id="@+id/card_main_temperature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="32°C"
                android:textColor="@color/secondary_dark"
                android:textSize="48sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/card_main_date"
                app:layout_constraintTop_toTopOf="@+id/card_main_weather_icon" />

            <TextView
                android:id="@+id/card_main_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="Kharkiv"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/card_main_temperature"
                app:layout_constraintTop_toBottomOf="@+id/card_main_temperature" />

            <TextView
                android:id="@+id/card_main_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:layout_marginTop="5dp"
                android:text="partly cloudy"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/card_main_city"
                app:layout_constraintTop_toBottomOf="@+id/card_main_city" />

            <TextView
                android:id="@+id/card_main_max_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="35°"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/card_main_weather_icon"
                app:layout_constraintStart_toStartOf="@+id/card_main_description" />

            <TextView
                android:id="@+id/card_main_divider"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="/"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/card_main_max_temp"
                app:layout_constraintStart_toEndOf="@+id/card_main_max_temp"
                app:layout_constraintTop_toTopOf="@+id/card_main_max_temp" />

            <TextView
                android:id="@+id/card_main_min_temp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="casual"
                android:text="26°"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/card_main_max_temp"
                app:layout_constraintStart_toEndOf="@+id/card_main_divider"
                app:layout_constraintTop_toTopOf="@+id/card_main_max_temp" />

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/barrier"
                app:barrierDirection="end"
                app:constraint_referenced_ids="card_main_temperature, card_main_city, card_main_description, refresh"
                />

            <ImageButton
                android:id="@+id/find_location"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@color/transparent"
                android:contentDescription="@string/choose_location"
                android:src="@drawable/ic_baseline_add_location"
                app:layout_constraintBottom_toBottomOf="@+id/card_main_date"
                app:layout_constraintEnd_toEndOf="@+id/card_main_weather_icon"
                app:layout_constraintTop_toTopOf="@+id/card_main_date" />

            <ImageButton
                android:id="@+id/refresh"
                android:layout_width="31dp"
                android:layout_height="37dp"
                android:layout_marginStart="8dp"
                android:background="@color/transparent"
                android:contentDescription="@string/refresh_the_page"
                android:src="@drawable/ic_baseline_refresh"
                app:layout_constraintBottom_toBottomOf="@+id/card_main_min_temp"
                app:layout_constraintStart_toEndOf="@+id/card_main_min_temp"
                app:layout_constraintTop_toTopOf="@+id/card_main_min_temp"
                tools:ignore="TouchTargetSizeCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:backgroundTint="@color/secondary_light"
        app:layout_constraintEnd_toEndOf="@id/card_main"
        app:layout_constraintStart_toStartOf="@id/card_main"
        app:layout_constraintTop_toBottomOf="@+id/card_main" >

        <com.google.android.material.tabs.TabItem
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/hours"
            />

        <com.google.android.material.tabs.TabItem
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/days"
            />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintStart_toStartOf="@id/card_main"
        app:layout_constraintEnd_toEndOf="@id/card_main"
        app:layout_constraintTop_toBottomOf="@id/tabs"
        app:layout_constraintBottom_toBottomOf="parent"
        >


    </androidx.viewpager2.widget.ViewPager2>

</androidx.constraintlayout.widget.ConstraintLayout>