<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="@dimen/size_3dp"
    android:backgroundTint="@color/background_light"
    android:elevation="@dimen/size_0dp"
    app:cardCornerRadius="@dimen/size_5dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/container_weather_item"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/date_info"
            style="@style/TextViewPrimary.Font_20sp"
            android:layout_marginStart="@dimen/size_16dp"
            android:textColor="@color/navy_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="09:00" />

        <TextView
            android:id="@+id/weather_description"
            style="@style/TextViewPrimary.ThinPrimary.Color_black"
            android:layout_width="@dimen/size_0dp"
            android:layout_marginStart="@dimen/size_16dp"
            android:layout_marginEnd="@dimen/size_16dp"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/temp_value"
            app:layout_constraintStart_toEndOf="@+id/date_info"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Sunny" />

        <TextView
            android:id="@+id/chance_of_rain_value"
            style="@style/TextViewPrimary.ThinPrimary.Color_black"
            android:layout_marginStart="@dimen/size_3dp"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_marginBottom="@dimen/size_5dp"
            android:textSize="@dimen/text_size_13sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/temp_value"
            app:layout_constraintTop_toBottomOf="@+id/temp_value"
            tools:text="25" />

        <TextView
            android:id="@+id/chance_of_rain_percentages"
            style="@style/TextViewPrimary.ThinPrimary.Color_black"
            android:layout_marginStart="1dp"
            android:text="@string/percents"
            android:textSize="@dimen/text_size_13sp"
            app:layout_constraintBottom_toBottomOf="@+id/chance_of_rain_value"
            app:layout_constraintStart_toEndOf="@+id/chance_of_rain_value"
            app:layout_constraintTop_toTopOf="@+id/chance_of_rain_value" />

        <ImageView
            android:id="@+id/drop_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.4"
            android:contentDescription="@string/drop_icon"
            android:src="@drawable/water_drop_icon"
            app:layout_constraintBottom_toBottomOf="@+id/chance_of_rain_value"
            app:layout_constraintEnd_toStartOf="@+id/temp_value"
            app:layout_constraintHeight="@dimen/size_13dp"
            app:layout_constraintTop_toTopOf="@+id/chance_of_rain_value"
            app:layout_constraintWidth="@dimen/size_13dp" />

        <ImageView
            android:id="@+id/temp_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/size_16dp"
            android:contentDescription="@string/weather_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth="50dp"
            tools:ignore="ImageContrastCheck"
            tools:src="@drawable/weather_icon" />

        <TextView
            android:id="@+id/temp_value"
            style="@style/TextViewPrimary.Font_20sp"
            android:layout_marginTop="@dimen/size_5dp"
            android:layout_marginEnd="@dimen/size_24dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@+id/temp_image"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="23°" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>